# catpro.claims-manager

./: .gitignore  CLAUDE.md  process_claim.py  requirements.txt  start.sh  stop.sh
.claude/: settings.json
.claude/commands/: filetrac.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a742875c23f7_initial_schema.py  b3f0e8a9c2d1_add_app_config.py  c4e1f9b2a3d7_add_poller_fields.py  d5e2b8a4c1f9_add_poll_interval.py  e6f3a7b5d2c8_add_triage_case_management.py  f7a4c2e8b9d3_add_error_detail_columns.py
backend/app/: config.py  database.py  main.py  models.py  poller_manager.py  routes.py  schemas.py
backend/app/services/: adjusters.json  claim_processor.py  email_source.py  eml_parser.py  filetrac_auth.py  filetrac_submit.py  pdf_extractor.py  poller.py  test_email.py
backend/scripts/: ft_query.py  ft_session.py  poll.py  process_claim.py  send_test_email.py
backend/tests/: conftest.py  test_email_source.py  test_filetrac_auth.py  test_filetrac_submit.py  test_models.py  test_poller.py  test_routes.py
catpro/: __init__.py  config.py  db.py  email_source.py  poller.py  test_email.py
data/templates/: sample_acuity_claim.eml
docs/: architecture.md  email-processing-workflow.md  product-requirements.md  stakeholder-deployment-summary.md
docs/brainstorms/: 2026-03-30-filetrac-claim-automation-brainstorm.md  2026-04-01-fastapi-react-dashboard-brainstorm.md  2026-04-05-mailbox-case-management-brainstorm.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+35 files in other folders)
