[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "catpro-backend"
version = "0.1.0"
requires-python = ">=3.13"

[project.scripts]
catpro-poll = "scripts.poll:main"
catpro-process = "scripts.process_claim:main"
catpro-test-email = "scripts.send_test_email:main"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
